--- a/selenium-automation-framework/selenium-docker/test-output/old/Default suite/methods-alphabetical.html
+++ b/selenium-automation-framework/selenium-docker/test-output/old/Default suite/methods-alphabetical.html
@@ -1,18 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="aa89a6">  <td>24/07/29 16:35:34</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FlightReservationTest.flightReservationConfirmationTest()[pri:0, instance:flightreservation.FlightReservationTest@49b0b76]">flightReservationConfirmationTest</td> 
-  <td>main@1820383114</td>   <td></td> </tr>
-<tr bgcolor="aa89a6">  <td>24/07/29 16:35:30</td>   <td>-3523</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FlightReservationTest.flightSearchTest()[pri:0, instance:flightreservation.FlightReservationTest@49b0b76]">flightSearchTest</td> 
-  <td>main@1820383114</td>   <td></td> </tr>
-<tr bgcolor="aa89a6">  <td>24/07/29 16:35:32</td>   <td>-2058</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FlightReservationTest.flightSelectionTest()[pri:0, instance:flightreservation.FlightReservationTest@49b0b76]">flightSelectionTest</td> 
-  <td>main@1820383114</td>   <td></td> </tr>
-<tr bgcolor="aa89a6">  <td>24/07/29 16:35:36</td>   <td>2085</td> <td>&nbsp;</td><td title="&lt;&lt;FlightReservationTest.quitDriver()[pri:0, instance:flightreservation.FlightReservationTest@49b0b76]">&lt;&lt;quitDriver</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1820383114</td>   <td></td> </tr>
-<tr bgcolor="aa89a6">  <td>24/07/29 16:35:29</td>   <td>-4962</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FlightReservationTest.registrationConfirmationTest()[pri:0, instance:flightreservation.FlightReservationTest@49b0b76]">registrationConfirmationTest</td> 
-  <td>main@1820383114</td>   <td></td> </tr>
-<tr bgcolor="aa89a6">  <td>24/07/29 16:35:18</td>   <td>-16099</td> <td>&nbsp;</td><td title="&gt;&gt;FlightReservationTest.setDriver()[pri:0, instance:flightreservation.FlightReservationTest@49b0b76]">&gt;&gt;setDriver</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1820383114</td>   <td></td> </tr>
-<tr bgcolor="aa89a6">  <td>24/07/29 16:35:23</td>   <td>-10952</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FlightReservationTest.userRegistrationTest()[pri:0, instance:flightreservation.FlightReservationTest@49b0b76]">userRegistrationTest</td> 
-  <td>main@1820383114</td>   <td></td> </tr>
+<tr bgcolor="aa89a6">  <td>24/07/30 15:46:30</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VendorPortalTest.dashboardTest()[pri:0, instance:tests.vendorportal.VendorPortalTest@cd3fee8]">dashboardTest</td> 
+  <td>main@1645547422</td>   <td></td> </tr>
+<tr bgcolor="aa89a6">  <td>24/07/30 15:46:27</td>   <td>-2919</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VendorPortalTest.loginTest()[pri:0, instance:tests.vendorportal.VendorPortalTest@cd3fee8]">loginTest</td> 
+  <td>main@1645547422</td>   <td></td> </tr>
+<tr bgcolor="aa89a6">  <td>24/07/30 15:46:34</td>   <td>3775</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VendorPortalTest.logoutTest()[pri:0, instance:tests.vendorportal.VendorPortalTest@cd3fee8]">logoutTest</td> 
+  <td>main@1645547422</td>   <td></td> </tr>
+<tr bgcolor="90c4b1">  <td>24/07/30 15:46:37</td>   <td>6990</td> <td>&nbsp;</td><td title="&lt;&lt;AbstractTest.quitDriver()[pri:0, instance:tests.vendorportal.VendorPortalTest@cd3fee8]">&lt;&lt;quitDriver</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1645547422</td>   <td></td> </tr>
+<tr bgcolor="90c4b1">  <td>24/07/30 15:46:22</td>   <td>-8661</td> <td>&nbsp;</td><td title="&gt;&gt;AbstractTest.setDriver()[pri:0, instance:tests.vendorportal.VendorPortalTest@cd3fee8]">&gt;&gt;setDriver</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1645547422</td>   <td></td> </tr>
+<tr bgcolor="aa89a6">  <td>24/07/30 15:46:27</td>   <td>-3129</td> <td>&nbsp;</td><td title="&gt;&gt;VendorPortalTest.setPageObjects()[pri:0, instance:tests.vendorportal.VendorPortalTest@cd3fee8]">&gt;&gt;setPageObjects</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1645547422</td>   <td></td> </tr>
 </table>
