--- a/selenium-automation-framework/selenium-docker/test-output/old/flight-reservation-suite/classes.html
+++ b/selenium-automation-framework/selenium-docker/test-output/old/flight-reservation-suite/classes.html
@@ -4,7 +4,7 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>flightreservation.FlightReservationTest</td>
+<td>tests.flightreservation.FlightReservationTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
